src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";
@import url("https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@100..900&family=Rubik+Mono+One&display=swap");

@theme {
  --font-display: "Atkinson", "sans-serif";
  --color-accent: #c02307;

  --color-active-bg: #1b0b08;
  --color-main: #c02307;
  --font-sans: "Lexend Peta", sans-serif;
  --font-mono: "Rubik Mono One", monospace;
  --font-serif: "Lexend Peta", serif;

  --font-lexend: "Lexend Peta", sans-serif;
  --font-rubik-mono: "Rubik Mono One", monospace;
}

/* Embla */

.embla {
  max-width: 48rem;
  margin: auto;
  --slide-height: 19rem;
  --slide-spacing: 1rem;
  --slide-size: 100%;
}
.embla__viewport {
  overflow: hidden;
}
.embla__container {
  display: flex;
  touch-action: pan-y pinch-zoom;
  margin-left: calc(var(--slide-spacing) * -1);
}
.embla__slide {
  transform: translate3d(0, 0, 0);
  flex: 0 0 var(--slide-size);
  min-width: 0;
  padding-left: var(--slide-spacing);
}

